--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,53 @@ html{
     display: flex;
 }
 
+img{
+    width: 100%;
+    display: block;
+}
+
+/* UTILITIES CARD */
+.heart,
+.discount,
+.bearableness{
+    display: inline-block;
+    position: absolute;
+    padding: .1em .3em;
+}
+
+.heart{
+    background-color: #fff;
+    font-size: 2rem;
+    top: .5em;
+    right: 0;
+}
+
+.heart:hover{
+    color: red;
+}
+
+.discount{
+    background-color: red;
+    bottom: 1.5em;
+    left: 0;
+}
+
+.bearableness{
+    background-color: green;
+    bottom: 1.5em;
+    left: 3.5em;
+}
+
+.discounted-price{
+    color: red;
+    font-weight: 800;
+}
+
+.price{
+    text-decoration: line-through;
+}
+
+
 /* HEADER */
 header{
     background-color: #FF6900;
@@ -43,4 +90,56 @@ header .flex-container{
 
     /* DEBUG */
     border: 1px solid black;
+}
+
+/* MAIN */
+main .flex-container{
+    padding: 2em 0;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    /* DEBUG */
+    border: 1px solid black;
+    background-color: lightgreen;
+}
+
+/* Card */
+.card{
+    width: calc(100% / 3 - 1em);
+    margin: 1em 0;
+
+    /* DEBUG */
+    border: 1px solid black;
+}
+
+/* Top Card */
+.top-card{
+    width: 100%;
+    font-size: 1rem;
+    position: relative;
+
+    /* DEBUG */
+    border: 1px solid black;
+    background-color: violet;
+}
+
+.top-card .hover-img{
+    display: none;
+}
+
+.top-card:hover .cover-img{
+    display: none;
+}
+
+.top-card:hover .hover-img{
+    display: block;
+}
+
+/* Bottom Card */
+.bottom-card{
+    width: 100%;
+    
+    /* DEBUG */
+    border: 1px solid black;
+    background-color: lightblue;
 }
