--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ main .flex-container{
     display: none;
 }
 
+/* Hover img */
 .top-card:hover .cover-img{
     display: none;
 }
@@ -135,6 +136,7 @@ main .flex-container{
     display: block;
 }
 
+
 /* Bottom Card */
 .bottom-card{
     width: 100%;
@@ -142,4 +144,26 @@ main .flex-container{
     /* DEBUG */
     border: 1px solid black;
     background-color: lightblue;
+}
+
+/* FOOTER */
+footer{
+    background-color: black;
+}
+
+footer .flex-container{
+    justify-content: space-between;
+    padding: 1em 0;
+    /* DEBUG */
+    background-color: lightblue;
+}
+
+.footer-info,
+.footer-social{
+    
+    /* DEBUG */
+    width: 50px;
+    height: 20px;
+    background-color: #fff;
+    border: 1px solid black;
 }
