--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ html{
 }
 
 img{
-    width: 100%;
+    max-width: 100%;
     display: block;
 }
 
@@ -65,6 +65,7 @@ a{
     bottom: 1.5em;
     left: 0;
 }
+
 .discount{
     background-color: red;
     color: white;
@@ -89,6 +90,11 @@ a{
 /* HEADER */
 header{
     background-color: #FF6900;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    left: 0;
 }
 
 header .flex-container{
@@ -129,7 +135,7 @@ header .flex-container{
 
 /* MAIN */
 main .flex-container{
-    padding: 2em 0;
+    margin-top: 8em;
     flex-wrap: wrap;
     justify-content: space-between;
 }
@@ -170,22 +176,34 @@ main .flex-container{
 /* FOOTER */
 footer{
     background-color: black;
+    border-bottom: 1px solid white;
 }
 
 footer .flex-container{
     justify-content: space-between;
     padding: 1em 0;
-
-    /* DEBUG */
-    background-color: lightblue;
 }
 
-.footer-info,
+/* Footer Info */
+.footer-info h3{
+    color: white;
+    margin-bottom: .5em;
+}
+
+.footer-info li{
+    padding-right: .5em;
+}
+
+/* Footer Social */
 .footer-social{
-    
-    /* DEBUG */
-    width: 50px;
-    height: 20px;
-    background-color: #fff;
-    border: 1px solid black;
+    color: white;
+    text-align: center;
+}
+
+.footer-social h4{
+    margin-bottom: .5em;
+}
+
+.footer-social i{
+    padding: .3em;
 }
