--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,8 @@ header .flex-container{
 
 /* MAIN */
 main .flex-container{
-    margin-top: 8em;
+    margin-top: 8em ;
+    margin-bottom: 3em;
     flex-wrap: wrap;
     justify-content: space-between;
 }
